@@ -18,6 +18,12 @@ Net::SSLeay::ASN1_STRING class in L<SPVM> represents L<ASN1_STRING|https://docs.
 
 =head1 Instance Methods
 
+=head2 length
+
+C<method length : int ();>
+
+Calls native L<ASN1_STRING_length|https://docs.openssl.org/1.1.1/man3/ASN1_STRING_length> function, and returns its return value.
+
 =head2 DESTROY
 
 C<method DESTROY : void ();>
