@@ -11,6 +11,7 @@
     * Add Net::SSLeay::ASN1_OCTET_STRING class.
     * Add Net::SSLeay::X509_EXTENSION class.
     * Add Net::SSLeay::ASN1_STRING class.
+    * Add Net::SSLeay::ASN1_STRING#length method.
     
   [Deprecations and Rename]
     * Net::SSLeay#P_dump_peer_certificate is deprecated, and dump_peer_certificate method is added.
